--- a/contact.html
+++ b/contact.html
@@ -129,6 +129,49 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 	</div>
 </div>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script>
+;(function($) {
+  $(function() {
+    $("#contact_form").submit(function() {
+        var email = $("#email").val(); // get email field value
+        var name = $("#txtfirstname").val() + $('txtlastname').val(); // get name field value
+        var msg = $("#other").val(); // get message field value
+        $.ajax(
+        {
+            type: "POST",
+            url: "https://mandrillapp.com/api/1.0/messages/send.json",
+            data: {
+                'key': 'pQZYbI8P5OVp4C6yOStY-w',
+                'message': {
+                    'from_email': email,
+                    'from_name': name,
+                    'headers': {
+                        'Reply-To': email
+                    },
+                    'subject': 'Website Contact Form Submission',
+                    'text': msg,
+                    'to': [
+                    {
+                        'email': 'bobby@simplyearl.com',
+                        'name': 'Bobby Earl',
+                        'type': 'to'
+                    }]
+                }
+            }
+        })
+        .done(function(response) {
+            alert('Your message has been sent. Thank you!'); // show success message
+            $('input[type="text"],textarea').val('');
+        })
+        .fail(function(response) {
+            alert('Error sending message.');
+        });
+        return false; // prevent page refresh
+    });
+  });
+}(jQuery));
+</script>
 
 </body>
 </html>
